<resources>
    <string name="app_name">geoChat</string>
    <string name="email">E-mail</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm password</string>
    <string name="submit">Submit</string>
    <string name="username">Username</string>
    <string name="passwordRequirementTooltip">Password must be at least 8 letters.</string>
    <string name="passwordConfirmTooltip">Passwords must be the same.</string>
    <string name="apiKey">6LfnjykUAAAAAMwpAv8VpKQDfvogMcFwZG3BgZNY</string>
    <string name="baseUrl">http://ralphtang.com:6666</string>
    <string name="error">Error</string>
    <string name="authCode1">Success</string>
    <string name="authCode2">That username has been taken!</string>
    <string name="authCode3">Your password is too short; it needs to be at least 8 letters.</string>
    <string name="authCode4">That email has already been registered!</string>
    <string name="authCode8">Your CAPTCHA response has expired.</string>
    <string name="authCode16">You need to login again.</string>
    <string name="serverUrl">ralphtang.com</string>
</resources>
