<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/authRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_alignParentTop="true"
        android:id="@+id/loginArt"
        android:layout_width="match_parent"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"
        android:layout_height="wrap_content"
        android:src="@drawable/geo_login_art"/>
    <android.support.v7.widget.LinearLayoutCompat
        android:orientation="vertical"
        android:layout_below="@id/loginArt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TabLayout
            android:id="@+id/authTabLayout"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            style="@style/GreenLeafTabLayout">
            <android.support.design.widget.TabItem
                android:text="@string/login"
                style="@style/GreenLeafTabLayout"/>
            <android.support.design.widget.TabItem
                android:text="@string/register"
                style="@style/GreenLeafTabLayout"/>
        </android.support.design.widget.TabLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:padding="15dp"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            android:id="@+id/authFormRoot"
            android:layout_height="match_parent">
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/emailEditText"
                android:maxLines="1"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:hint="@string/email"/>
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/usernameEditText"
                android:maxLines="1"
                android:visibility="gone"
                android:inputType="textNoSuggestions"
                android:layout_below="@id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"/>
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/passwordEditText"
                android:maxLines="1"
                android:layout_below="@id/usernameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password"/>
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/passwordConfirmEditText"
                android:visibility="gone"
                android:maxLines="1"
                android:layout_below="@id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/confirmPassword"/>
            <!--<TextView
                android:layout_below="@id/passwordConfirmEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password_requirement"/>-->
            <ProgressBar
                android:id="@+id/authSubmitProgress"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                />
            <Button
                android:id="@+id/authSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:theme="@style/GreenLeafPrimaryButton"
                android:layout_alignParentBottom="true"
                android:text="@string/submit"/>
        </RelativeLayout>
    </android.support.v7.widget.LinearLayoutCompat>
</RelativeLayout>